Fixed the topbar not showing up when in fullscreen or when in compact mode

--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 @media (-moz-pref("no-gap.mode-select", 0)) {
+	:root[zen-single-toolbar="true"][zen-compact-mode="true"]:not([customizing]){
+			#zen-appcontent-navbar-wrapper {
+			 min-height: 0.1px !important;
+			 height: 0.1px !important;
+		  }
+
+		  #zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
+			 height: 34px !important;
+		 }
+	}
 	:root[zen-compact-mode="true"]:not([customizing]) {
 		/* No-Gap Remove code */
 		.browserSidebarContainer {
@@ -9,13 +19,15 @@
 			margin: 0px !important;
 		}
 
-		#zen-appcontent-navbar-wrapper {
-			min-height: 0px !important;
-			height: 0px !important;
-		}
+		@media -moz-pref("zen.view.compact.hide-toolbar"){
+		  #zen-appcontent-navbar-wrapper {
+			 min-height: 0.1px !important;
+			 height: 0.1px !important;
+		  }
 
-		#zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
-			height: 34px !important;
+		  #zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
+			 height: 34px !important;
+		  }
 		}
 
 		/* Tab Edits for split tab view */
@@ -75,8 +87,8 @@
 
 	:root[zen-single-toolbar="true"], :root[zen-compact-mode="true"]:not([customizing]) {
 		#zen-appcontent-navbar-wrapper {
-			min-height: 0px !important;
-			height: 0px !important;
+			min-height: 0.1px !important;
+			height: 0.1px !important;
 		}
 
 		#zen-appcontent-navbar-wrapper[zen-has-hover="true"] {
